Bug 14457 - rpccli_is_connected() doesn't work correctly with internal pipes
Summary: rpccli_is_connected() doesn't work correctly with internal pipes
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.11.6
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Ralph Böhme
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-07 10:12 UTC by Ralph Böhme
Modified: 2026-05-05 13:09 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2020-08-07 10:12:33 UTC
Internal pipes don't have a transport, so checking for presence of a transpport in 
rpccli_is_connected() always fails. This causes winbindd to process SAMR and LSA requests for the local domain twice.

Have WIP patch, need bugnumber.